--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="오얏이">
     <meta property="og:description" content="오얏이의 하루살이">
-    <meta property="og:image" content="오얏.png">
+    <meta property="og:image" content="plum.png">
     <title>오얏이</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
@@ -22,7 +22,7 @@
             height: 100px;
             border-radius: 100%;
             border: 2px solid rgb(255, 247, 165);
-            background-image: url('오얏.png');
+            background-image: url('plum.png');
             background-position: center;
             background-size: cover;
         }
